# magnetite-cms

./: .env.example  .gitignore  Cargo.toml  README.md  dev-compose.yaml
.github/: FUNDING.yml
.github/workflows/: push-clippy-and-test.yml  tag-buld-release.yml
.sqlx/: query-06abdf703a9cc57a6571732b9c64b0b4377bf46956d2a5e56cf0eae9906675d4.json  query-0f580fed019074804afadbdc257b1e2656a8590733f6f4109b0dc5400cd160df.json  query-1a92552593052760be2cdf5df179c926c3537567574047e5dfac5c0f40acd6e3.json  query-2f00ea750cd412a748f708b3140f9cfb07d46e853044280e54a8951290a16737.json  query-4a53e6e20b45ff3846d1db1fe6a65d80e5a88cbd20abbf8fc273cf24ab818643.json  query-6b8323ce202039116bb6ab45b84936bd6a7eca1099dfeb96e527fcd3af332fe4.json  query-b9fca2d5bbe7f41a7050c738a092dc191e8350098408baf1befa7374c86efb0f.json  query-deb02c2e7160c8e48ee7644346c04622bf37668bc885ed7f0757940a4227a269.json
migrations/: 20240714142519_pages.down.sql  20240714142519_pages.up.sql  20240805053530_post_metadata.down.sql  20240805053530_post_metadata.up.sql
src/: database.rs  main.rs  util.rs  web.rs
src/database/: cache.rs  process.rs  schema.rs
src/web/: html.rs
