[package]
name = "magnetite-cms"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
color-eyre = { version = "0.6.3", default-features = false }
colored = "2.1.0"
dotenvy = "0.15.7"
poem = { version = "3.0.1", features = ["eyre06"] }
poem-openapi = { version = "5.0.2", features = ["chrono", "uuid", "swagger-ui"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.9.1", features = ["macro-diagnostics", "v7"] }
