[package]
name = "magnetite-cms"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-http = "3.8.0"
actix-server = "2.4.0"
actix-web = "4.8.0"
bytes = "1.6.1"
chrono = "0.4.38"
color-eyre = { version = "0.6.3", default-features = false }
colored = "2.1.0"
dotenvy = "0.15.7"
futures-util = "0.3.30"
http = "1.1.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.9.1", features = ["macro-diagnostics", "v7"] }
