[package]
name = "magnetite-cms"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
chrono = "0.4.38"
color-eyre = { version = "0.6.3", default-features = false }
colored = "2.1.0"
dotenvy = "0.15.7"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["full"] }
uuid = { version = "1.9.1", features = ["macro-diagnostics", "v7"] }
